add widgetDisable; widgetStruct;
1. add required info to Widget
2. add single Struct For Widgets

--- a/go_package.tmpl
+++ b/go_package.tmpl
@@ -5,6 +5,7 @@ import (
 	"errors"
 	"fmt"
 	"time"
+	"strconv"
 
 	//3rd party libs
 	"github.com/sipin/gothrift/thrift"
@@ -22,6 +23,12 @@ type IDLabelPair struct {
 	Label string
 }
 
+func WidgetDisable(ws ...*Widget) {
+	for _, w := range ws {
+		w.Disable()
+	}
+}
+
 type Widget struct {
 	Label       string
 	Value       string
@@ -31,7 +38,34 @@ type Widget struct {
 	ErrorMsg    string
 	EnumData    map[int32]string
 	StringList  []string
+	Required    bool
+	Disabled    bool
 	GetBindData	func() (data []*IDLabelPair)
+}
+func (w *Widget) Disable() {
+	w.Disabled = true
+}
+func (w *Widget) String() string {
+	
+	if idx, err := strconv.Atoi(w.Value); err == nil {
+		if w.StringList != nil {
+			return w.StringList[idx]
+		}
+		if w.EnumData != nil {
+			return w.EnumData[int32(idx)]
+		}
+	}
+
+	if w.GetBindData != nil {
+		datas := w.GetBindData()
+		for _, data := range datas {
+			if w.Value == data.ID {
+				return data.Label
+			}
+		}
+	}
+
+	return w.Value
 }
 
 type IXuanWuObj interface {
