--- a/tmpl/form.tmpl
+++ b/tmpl/form.tmpl
@@ -118,6 +118,8 @@ func (o *$obj.name.value) ${field.name.value}Widget() *Widget {
 			StringList : $(filename).$field.stringList,
 		#else if hasattr($field, "bindData")
 			GetBindData : $field.bindData,
+		#else if $field.required 
+			Required: true,
 		#end if
 		}
 		if o.widgets == nil {
@@ -178,6 +180,23 @@ func (o *$obj.name.value) GetFieldAsString(fieldKey string) (Value string) {
 	return
 }
 
+type ${obj.name.value}Widget struct {
+#for field in $obj.fields
+#if $field.name.value != "ID"
+	${field.name.value} *Widget
+#end if
+#end for
+}
+
+func (o *$obj.name.value) WidgetStruct() *${obj.name.value}Widget {
+	return &${obj.name.value}Widget{
+#for field in $obj.fields
+#if $field.name.value != "ID"
+	${field.name.value}: o.${field.name.value}Widget(),
+#end if
+#end for
+	}
+}
 
 func (o *$obj.name.value) Widgets() []*Widget {
 	return []*Widget{
