Fix date widget

--- a/go_package.tmpl
+++ b/go_package.tmpl
@@ -78,6 +78,7 @@ type IXuanWuObj interface {
 }
 
 var DateTimeLayout = "2006-01-02 15:04"
+var DateLayout = "2006-01-02"
 
 func I64Time(c int64) string {
 	if c == 0 {
