--- a/tmpl/form.tmpl
+++ b/tmpl/form.tmpl
@@ -80,7 +80,7 @@ func (o *$obj.name.value) ValidateData() (hasError bool) {
 		o.${field.name.value}Widget().ErrorMsg = "$field.requiredMsg"
 		hasError = true
 	}
-	
+
 	#else if hasattr(field, "rule")
 	if !regexp.MustCompile(`$field.rule`).Match([]byte(o.$field.name.value)) {
 		o.${field.name.value}Widget().ErrorMsg = "$field.ruleMsg"
@@ -119,13 +119,13 @@ func (o *$obj.name.value) ${field.name.value}Widget() *Widget {
 			Value : o.$field.name.value,
 		#else if $field.type == "i32" and $field.widget_type in ["datetime"]
 			Value : I32Time(o.$field.name.value),
-		#else if $field.type == "i32" 
+		#else if $field.type == "i32"
 			Value : strconv.FormatInt(int64(o.$field.name.value), 10),
 		#else if $field.type == "i64" and $field.widget_type == "datetime"
 			Value : I64Time(o.$field.name.value),
 		#else if $field.type == "i64" and $field.widget_type == "date"
 			Value : I64Date(o.$field.name.value),
-		#else if $field.type == "i64" 
+		#else if $field.type == "i64"
 			Value : strconv.FormatInt(o.$field.name.value, 10),
 		#else if $field.type == "bool"
 			Value : strconv.FormatBool(o.$field.name.value),
@@ -143,7 +143,7 @@ func (o *$obj.name.value) ${field.name.value}Widget() *Widget {
 			StringList : $(filename).$field.stringList,
 		#else if hasattr($field, "bindData")
 			GetBindData : $field.bindData,
-		#else if $field.required 
+		#else if $field.required
 			Required: true,
 		#end if
 		}
@@ -187,14 +187,26 @@ func (o *$obj.name.value) GetFieldAsString(fieldKey string) (Value string) {
 		Value = o.$field.name.value
 	#else if $field.type == "i32" and $field.widget_type == "datetime"
 		Value = I32Time(o.$field.name.value)
-	#else if $field.type == "i32" 
-		Value = strconv.FormatInt(int64(o.$field.name.value), 10)
+	#else if $field.type == "i32"
+	        widget := o.${field.name.value}Widget()
+		if widget.Type == "select" {
+		   	       idx := int32(o.$field.name.value)
+			       Value = widget.StringList[idx]
+		} else {
+				Value = strconv.FormatInt(int64(o.$field.name.value), 10)
+		}
 	#else if $field.type == "i64" and $field.widget_type == "datetime"
 		Value = I64Time(o.$field.name.value)
 	#else if $field.type == "i64" and $field.widget_type == "date"
 		Value = I64Date(o.$field.name.value)
-	#else if $field.type == "i64" 
-		Value = strconv.FormatInt(o.$field.name.value, 10)
+	#else if $field.type == "i64"
+		widget := o.${field.name.value}Widget()
+		if widget.Type == "select" {
+		   	       idx := int64(o.$field.name.value)
+			       Value = widget.StringList[idx]
+		} else {
+				Value = strconv.FormatInt(int64(o.$field.name.value), 10)
+		}
 	#else if $field.type == "bool"
 		Value = strconv.FormatBool(o.$field.name.value)
 	#else if $field.type == "list<string>"
