--- a/go_package.tmpl
+++ b/go_package.tmpl
@@ -31,7 +31,7 @@ func WidgetDisable(ws ...*Widget) {
 
 func WidgetHidden(ws ...*Widget) {
 	for _, w := range ws {
-		w.Hidden()
+		w.Hide()
 	}
 }
 
@@ -53,7 +53,7 @@ func (w *Widget) Disable() {
 	w.Disabled = true
 }
 
-func (w *Widget) Hidden() {
+func (w *Widget) Hide() {
 	w.Hidden = true
 }
 
