add viewUrl, content for Id field

--- a/go.tmpl
+++ b/go.tmpl
@@ -168,3 +168,5 @@ func (p *$obj.name.value) ToBytes() []byte {
 #include "tmpl" + $os.sep + "collection.tmpl"
 
 #include "tmpl" + $os.sep + "search.tmpl"
+
+#include "tmpl" + $os.sep + "property.tmpl"
