--- a/tmpl/form.tmpl
+++ b/tmpl/form.tmpl
@@ -152,6 +152,9 @@ func (o *$obj.name.value) ${field.name.value}Widget() *Widget {
 		#if hasattr($field, "hidden")
 		        Hidden: $field.hidden,
 		#end if
+		#if hasattr($field, "readonly")
+		        readonly: $field.readonly,
+		#end if
 		}
 		if o.widgets == nil {
 			o.initWidget()
