--- a/tmpl/search.tmpl
+++ b/tmpl/search.tmpl
@@ -1,36 +1,35 @@
-//Index Search
-func (o *$obj.name.value) IndexSearch() () {
-	#for key, fields in $obj.search.iteritems()
-	core.Index("$(obj.name.value.lower())", "$(key.lower())", o.ID.Hex(), nil, $(obj.name.value)Search$(key)Obj{
-		#for field in fields
-		o.$(field),
-		#end for
-	})
+//Search
+#if $obj.search != None
+type $(obj.name.value)SearchObj struct {
+	#for field in $obj.search
+	$field string `json:"$(field)"`
 	#end for
 }
 
+func (o *$obj.name.value) IndexSearch() () {
+	core.Index("$(obj.name.value.lower())", "simple", o.ID.Hex(), nil, $(obj.name.value)SearchObj{
+		#for field in $obj.search
+		o.$(field),
+		#end for
+	})
+}
 
-// Search
-#for key, v in $obj.search.iteritems()
-func $(obj.name.value)Search$(key)(word string, limit int, offset int) (core.SearchResult, error) {
+func $(obj.name.value)Search(word string, limit int, offset int) (core.SearchResult, error) {
 	searchJson := `{
     "query" : {
         "query_string" :  {
 	      "default_operator": "OR",
-	      "fields": ` + `$(str(v).replace("'", '"'))` + `,
+	      "fields": ` + `$(str($obj.search).replace("'", '"'))` + `,
 	      "query": "` + word + `"
 	    }
     }
 }`
 	args := map[string]interface{} {"from" : offset, "size": limit}
-	return core.SearchRequest("$(obj.name.value.lower())", "$(key.lower())", args, searchJson)
+	return core.SearchRequest("$(obj.name.value.lower())", "simple", args, searchJson)
 }
-#end for
 
 func $(obj.name.value)SearchPurge() {
-#for key, v in $obj.search.iteritems()
-	core.Delete("$(obj.name.value.lower())", "$(key.lower())", "", nil)
-#end for
+	core.Delete("$(obj.name.value.lower())", "simple", "", nil)
 }
 
 func $(obj.name.value)SearchRebuild() {
@@ -46,11 +45,14 @@ func $(obj.name.value)SearchRebuild() {
 		start += len(objs)
 	}
 }
+#end if
 
-func (o *$obj.name.value) HasSimpleSearch() bool {
-#if $obj.search.has_key("Simple")
+func (o *$obj.name.value) IsSearchEnabled() bool {
+#if $obj.search != None
 	return true
 #else
 	return false
 #end if
 }
+
+//end search
