--- a/tmpl/search.tmpl
+++ b/tmpl/search.tmpl
@@ -14,18 +14,28 @@ func (o *$obj.name.value) IndexSearch() () {
 	})
 }
 
+func $(obj.name.value)GetSearchObj(word string) map[string]interface {} {
+	//todo: should be able to cache struct
+	queryString := make(map[string]interface{})
+	queryString["default_operator"] = "OR"
+	queryString["fields"] = []string{
+		#for field in $obj.search
+		"$(field)",
+		#end for
+	}
+	queryString["query"] = word
+	query := make(map[string]interface{})
+	query["query_string"] = queryString
+
+	args := make(map[string]interface{})
+	args["query"] = query
+	return args
+}
+
 func $(obj.name.value)Search(word string, limit int, offset int) (core.SearchResult, error) {
-	searchJson := `{
-    "query" : {
-        "query_string" :  {
-	      "default_operator": "OR",
-	      "fields": ` + `$(str($obj.search).replace("'", '"'))` + `,
-	      "query": "` + word + `"
-	    }
-    }
-}`
+	searchObj := $(obj.name.value)GetSearchObj(word)
 	args := map[string]interface{} {"from" : offset, "size": limit}
-	return core.SearchRequest("$(obj.name.value.lower())", "simple", args, searchJson)
+	return core.SearchRequest("$(obj.name.value.lower())", "simple", args, searchObj)
 }
 
 func $(obj.name.value)SearchPurge() {
