--- a/go_package.tmpl
+++ b/go_package.tmpl
@@ -42,6 +42,7 @@ type Widget struct {
 	PlaceHolder string
 	Type        string
 	ErrorMsg    string
+	EnumKey     []int32
 	EnumData    map[int32]string
 	StringList  []string
 	Required    bool
