Skip empty field in filter

--- a/go_package.tmpl
+++ b/go_package.tmpl
@@ -136,6 +136,9 @@ func getSearchObj(word string, fields []string, params map[string]string, termKe
 	ranges := make(map[string]map[string]int64)
 
 	for k, v := range params {
+		if v == "" {
+			continue
+		}
 		if _, ok := termKeys[k]; ok {
 			terms[k] = v
 			continue
