--- a/tmpl/crud.tmpl
+++ b/tmpl/crud.tmpl
@@ -66,7 +66,7 @@ func $(className)Index(ctx *admin.AdminContext) (html string) {
 	for i, v := range objs {
 		stupidGoInterface[i] = models.IXuanWuObj(v)
 	}
-	return autoTpl.Index(ctx, ctx.GetFlash(), obj, stupidGoInterface, total, limit, offset)
+	return autoTpl.Index(ctx.Context, ctx.GetFlash(), obj, stupidGoInterface, total, limit, offset)
 }
 
 func $(className)Create(ctx *admin.AdminContext) (html string) {
@@ -77,9 +77,9 @@ func $(className)Create(ctx *admin.AdminContext) (html string) {
 		obj = models.New$(className)FromBytes(data)
 		obj.ValidateData()
 		ctx.ClearSession("$(className)Create")
-		return autoTpl.Create(ctx, obj.Widgets(), "建立$(classLabel)")
+		return autoTpl.Create(ctx.Context, obj.Widgets(), "建立$(classLabel)")
 	}
-	return autoTpl.Create(ctx, models.New$(className)().Widgets(), "建立$(classLabel)")
+	return autoTpl.Create(ctx.Context, models.New$(className)().Widgets(), "建立$(classLabel)")
 }
 
 func $(className)CreatePost(ctx *admin.AdminContext) (html string) {
@@ -103,7 +103,7 @@ func $(className)CreatePost(ctx *admin.AdminContext) (html string) {
 
 func $(className)View(ctx *admin.AdminContext) (html string) {
 	obj, _ := models.$(className)FindByID(ctx.Params["id"])
-	return autoTpl.View(ctx, obj)
+	return autoTpl.View(ctx.Context, obj)
 }
 
 func $(className)Edit(ctx *admin.AdminContext) (html string) {
@@ -116,11 +116,11 @@ func $(className)Edit(ctx *admin.AdminContext) (html string) {
 		ctx.ClearSession("$(className)Edit")
 
 		if o.ID == obj.ID {
-			return autoTpl.Edit(ctx, o)
+			return autoTpl.Edit(ctx.Context, o)
 		}
 	}
 
-	return autoTpl.Edit(ctx, obj)
+	return autoTpl.Edit(ctx.Context, obj)
 }
 
 func $(className)ViewPost(ctx *admin.AdminContext) (html string) {
