add list<string> support for ValidateData

--- a/tmpl/form.tmpl
+++ b/tmpl/form.tmpl
@@ -82,6 +82,8 @@ func (o *$obj.name.value) ValidateData() (hasError bool) {
 	if o.$field.name.value == "" {
 		#elif $field.type in ["i32", "i64"]
 	if o.$field.name.value == 0 {
+		#elif $field.type == "list<string>"
+	if len(o.$field.name.value) == 0 {
 		#end if
 		o.${field.name.value}Widget().ErrorMsg = "$field.requiredMsg"
 		hasError = true
